# web-presentation

./: .dockerignore  .gitignore  .gitmodules  AGENTS.md  Dockerfile  Dockerfile.lite  README.md  docker-compose.dev.yml  docker-compose.prod.yml  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
backend/: .env.example  README.md  output.txt  pyproject.toml  test_output.txt  test_result.txt
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  agent_catalog.py  agent_factory.py  agent_runtime_config.py  auth_tokens.py  authoring_canvas.py  base_font_scale.py  context_usage.py  db.py  history_compression.py  history_policy.py  image_history_hydration.py  image_refs.py  llm_http_trace.py  member_delegation.py  member_prompts.py  message_history.py  model_resolver.py  page_mutation_enqueue.py  page_mutation_executor.py  page_mutation_queue.py  platform_runtime.py  platform_tools.py  provider_catalog.py  pydantic_event_projection.py  pydantic_model_resolver.py  pydantic_runner.py  pydantic_tools.py  registry.py  run_background.py  run_errors.py  run_event_writer.py  run_write_fence.py  runtime_context_builder.py  secret_cipher.py  session_facade.py  session_facade_common.py  session_facade_models.py  session_facade_pydantic.py  session_facade_requirements.py  (+10 more)
backend/app/api/: __init__.py  auth_cookie.py  dependencies.py  router.py
backend/app/config_templates/: app.config.yaml  (+2 more)
backend/migrations/: README  env.py
backend/scripts/: start_lite_container.sh  start_simple_container.sh
backend/tests/: __init__.py  conftest.py
(+880 files in other folders)
