[project]
name = "backend"
version = "0.1.0"
description = "页面管理一期后台服务"
readme = "README.md"
authors = [
    { name = "LLMxPM", email = "1600854022@qq.com" }
]
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "cryptography>=48.0.0",
    "fastapi>=0.136.1",
    "google-genai>=2.6.0",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "openai>=2.38.0",
    "playwright>=1.60.0",
    "psycopg[binary]>=3.3.4",
    "pyjwt>=2.13.0",
    "pyyaml>=6.0.3",
    "pydantic-settings>=2.14.1",
    "pwdlib>=0.3.0",
    "python-multipart>=0.0.29",
    "sqlalchemy>=2.0.49",
    "tzdata>=2026.2",
    "uvicorn[standard]>=0.47.0",
    "aioboto3>=15.5.0",
    "redis>=6.0.0",
    "pydantic-ai>=1.38.0",
]


[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"
addopts = "-p no:doctest"
markers = [
    "unit: 后端纯函数、仓储和小范围模块测试。",
    "api: 面向 FastAPI 路由与 BFF 接口的测试。",
    "integration: 覆盖多服务、多状态流或预览构建链路的测试。",
    "contract: 覆盖 backend 对外稳定契约的测试。",
    "browser: 依赖浏览器环境的测试。",
]

[tool.uv]
package = true

[tool.uv.build-backend]
module-name = "app"
module-root = ""
